# terrain_renderer

./: .env  .gitignore  Cargo.toml  README.md  config.toml
.cargo/: config.toml
assets/shaders/: build_node_list.wgsl  build_patch_list.wgsl  terrain.wgsl  terrain_pbr.wgsl  update_node_list.wgsl  update_quadtree.wgsl
assets/shaders/map/: fragment.frag  vertex.vert
assets/shaders/sky/: fragment.frag  vertex.vert
assets/shaders/water/: fragment.frag  vertex.vert
benches/: map_generation.rs
crates/app_plugin/: Cargo.toml
crates/app_plugin/src/: lib.rs  terrain.wgsl  terrains.rs
crates/bevy_terrain/src/preprocess/: file_io.rs  mod.rs
crates/download_tool/: Cargo.toml
crates/download_tool/src/: main.rs  saxony.rs  switzerland.rs
crates/terrain_config/: Cargo.toml
crates/terrain_config/src/: lib.rs
crates/terrain_settings/: Cargo.toml
crates/terrain_settings/src/: lib.rs
download_tool/: Cargo.toml
download_tool/src/: parse.rs
game_plugin/: Cargo.toml
game_plugin/src/: lib.rs  map.rs  map_data.rs  map_generation.rs  map_pipeline.rs
plugins/app_plugin/: Cargo.toml
plugins/app_plugin/src/: camera.rs  lib.rs  parse.rs  parse_new.rs  terrain_setup.rs
plugins/game_plugin/: Cargo.toml
plugins/game_plugin/src/: lib.rs
plugins/map_plugin/: Cargo.toml
plugins/map_plugin/benches/: map_generation.rs
plugins/map_plugin/src/: bundles.rs  chunks.rs  data.rs  generation.rs  lib.rs  map_data.rs  map_generation.rs  map_pipeline.rs  pipeline.rs  systems.rs  tile.rs
plugins/map_plugin/src/chunks/: mod.rs  systems.rs
plugins/map_plugin/src/water/: mod.rs  pipeline.rs  systems.rs
plugins/sky_plugin/: Cargo.toml
plugins/sky_plugin/src/: cube_sphere.rs  lib.rs  pipeline.rs  systems.rs
plugins/util/: Cargo.toml
plugins/util/src/: macros.rs
src/: main.rs
urls/: urls_hartenstein.csv  urls_hartenstein_large.csv  urls_saxony.csv  urls_uri_dop.csv  urls_uri_dtm.csv
