[package]
name = "terrain-rendering"
version = "0.1.0"
publish = false
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = [
    # "bevy/dynamic"
]

[workspace]
members = ["plugins/*"]

[workspace.dependencies]
# bevy = { git="https://github.com/bevyengine/bevy" }
bevy = { git="https://github.com/Ku95/bevy", branch="max_directional_lights" }

[dependencies]
bevy = { workspace = true }
app_plugin = { path="plugins/app_plugin" }
