[package]
name = "saxony_terrain_renderer"
version = "0.1.0"
publish = false
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["plugins/*", "download_tool"]

[dependencies]
bevy = { git="https://github.com/Ku95/bevy", branch="max_directional_lights" }
app_plugin = { path="plugins/app_plugin" }
