[package]
name = "terrain_renderer"
description = "Large-Scale Real-World Terrain Renderer written in Rust using the Bevy game engine."
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
authors = ["Kurt Kühnert <kurt@kuehnert.dev>"]
repository = "https://github.com/kurtkuehnert/terrain_renderer"
publish = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["crates/*"]

[dependencies]
bevy = "0.9"
app_plugin = { path="crates/app_plugin" }
