[package]
name = "app_plugin"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
bevy = { git="https://github.com/bevyengine/bevy" }
bevy_terrain = { path="../bevy_terrain" }
bevy_atmosphere = { path="../bevy_atmosphere" }
terrain_settings = { path="../terrain_settings" }
dolly = "0.4"
