[package]
name = "app_plugin"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
bevy = "0.9"
bevy_terrain = { path="../bevy_terrain" }
bevy_atmosphere = { git="https://github.com/JonahPlusPlus/bevy_atmosphere", rev="1391dd69"}
terrain_settings = { path="../terrain_settings" }
dolly = "0.4"
