[package]
name = "download_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
terrain_settings = { path="../terrain_settings" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
zip = "0.6"
image = "0.24"
tiff = { git="https://github.com/kurtkuehnert/image-tiff", branch="YCbCr_support" }
rapid-qoi = "0.6"
dtm = "0.1"
itertools = "0.10"
bytemuck = "1.12"
futures = "0.3"
anyhow = "1.0"
indicatif = "0.17"
