[package]
name = "app_plugin"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
bevy = { git="https://github.com/ku95/bevy", branch="texture-formats" }
bevy_fly_camera =  { path="../bevy_fly_camera" }
bevy_terrain = { path="../bevy_terrain" }
bevy_web_asset = { path="../bevy_web_asset" }
smooth-bevy-cameras = { path="../smooth-bevy-cameras" }

# bevy-inspector-egui = { git="https://github.com/jakobhellermann/bevy-inspector-egui" }

itertools = "*"
image = { git="https://github.com/image-rs/image" }
