[package]
name = "app_plugin"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
bevy = { git="https://github.com/Ku95/bevy", branch="max_directional_lights" }
bevy_terrain = { path="../bevy_terrain" }
bevy_atmosphere = { path="../bevy_atmosphere" }
terrain_config = { path="../terrain_config" }

dolly = "0.3"
