[package]
name = "map_plugin"
version = "0.1.0"
publish = false
edition = "2018"

[features]
default = [
    "bevy/dynamic",
]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", branch = "bevy-main" }
nalgebra-glm = "0.14.0"
noise = "0.7.0"
rand = "0.8.4"
itertools = "0.10.1"